--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,40 @@
 <head>
   <title>Stereo Reader</title>
   <style>
-    body { width: 200px; padding: 10px; }
+    body { width: 250px; padding: 10px; font-family: sans-serif; }
+    h1 { font-size: 1.2em; margin-top: 0; }
+    .setting { margin-bottom: 10px; }
+    label { display: block; margin-bottom: 5px; font-weight: bold; font-size: 0.9em; }
+    input[type="color"] { width: 100%; height: 30px; border: none; padding: 0; cursor: pointer; }
+    #toggleButton { width: 100%; padding: 8px; font-size: 1em; cursor: pointer; }
+    #timerDisplay { font-size: 1.2em; font-weight: bold; margin-top: 15px; text-align: center; padding: 5px; border: 1px solid #ccc; border-radius: 4px; }
   </style>
 </head>
 <body>
-  <h1>Stereo Reader</h1>
-  <button id="toggleButton">Enable</button>
+  <h1>Stereo Reader Settings</h1>
+
+  <div class="setting">
+    <label for="toggleButton">Filter Status:</label>
+    <button id="toggleButton">Enable</button>
+  </div>
+
+  <div class="setting">
+    <label for="colorA">Left Eye Color (Color A):</label>
+    <input type="color" id="colorA" value="#FF0000">
+  </div>
+
+  <div class="setting">
+    <label for="colorB">Right Eye Color (Color B):</label>
+    <input type="color" id="colorB" value="#0000FF">
+  </div>
+
+  <div class="setting">
+    <label for="bgColor">Background Color (Optional):</label>
+    <input type="color" id="bgColor" value="#FFFFFF">
+  </div>
+
+  <div id="timerDisplay">00:00</div>
+
   <script src="popup.js"></script>
 </body>
 </html>
