feat: Add word-based splitting algorithm and selection UI

--- a/popup.html
+++ b/popup.html
@@ -35,6 +35,14 @@
     <input type="color" id="bgColor" value="#FFFFFF">
   </div>
 
+  <div class="setting">
+    <label for="algorithmSelect">Splitting Algorithm:</label>
+    <select id="algorithmSelect">
+      <option value="char">Character-based (PoC)</option>
+      <option value="word">Word-based</option>
+    </select>
+  </div>
+
   <div id="timerDisplay">00:00</div>
 
   <script src="popup.js"></script>
