feat: Finalize project name to FusionText and update project plan
- Updates the project name from "Stereo Reader" to "FusionText" in manifest.json and popup.html.
- Adds a note to Task 4.1 in project-plan.md to guide future testing efforts, focusing on dynamic content and the need for a MutationObserver.

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>Stereo Reader Settings</h1>
+  <h1>FusionText Settings</h1>
 
   <div class="setting">
     <label for="toggleButton">Filter Status:</label>
