feat: Add text scaling control and medical disclaimer
This commit completes the final tasks of Phase 4 by introducing a text scaling feature and adding a medical disclaimer to the documentation.

- Adds a range slider and reset button to the popup for text scaling (100% to 1000%).
- Updates content script to apply the selected font size to the wrapped text.
- Creates README.md with a medical disclaimer as requested by the user.
- Updates project-plan.md to reflect the completed tasks.

--- a/popup.html
+++ b/popup.html
@@ -43,6 +43,13 @@
     </select>
   </div>
 
+  <div class="setting">
+    <label for="textScaleRange">Text Scale:</label>
+    <input type="range" id="textScaleRange" min="100" max="1000" value="100" step="50">
+    <span id="textScaleValue">100%</span>
+    <button id="resetScaleButton">Reset</button>
+  </div>
+
   <div id="timerDisplay">00:00</div>
 
   <script src="popup.js"></script>
